# AUTOMATIC-BOT

./: .gitignore  README.md  deep_research.py  main.py  pyproject.toml  search_prediction_markets.py  tests.py
.github/workflows/: run_bot_on_tournament.yaml  test_bot.yaml
reports/: .gitkeep
